--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
+        name: date
+        run: echo "::set-output name=today::$(date +%s)"
+      -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       -
@@ -27,4 +30,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: jcgillespie/mssql-sqlpackage:latest,jcgillespie/mssql-sqlpackage:$(date +%s)
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/mssql-sqlpackage:latest,${{ secrets.DOCKERHUB_USERNAME }}/mssql-sqlpackage:${{ steps.date.outputs.today }}
