--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ updates:
     time: "11:00"
   open-pull-requests-limit: 10
 - package-ecosystem: "github-actions"
-  directory: "/.github/workflows/"
+  directory: "/"
   schedule:
     interval: "daily"
     time: "11:00"
