adding platforms to CI build

--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -15,4 +15,5 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v4
         with:
+          platforms: linux/amd64
           push: false
